--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -96,7 +96,7 @@
                 </div>
             </a>
 
-            <a href="assetadd.html">
+            <a href="addasset.html">
                 <div class="menu_btn4">
                     <img src="images/import.png">
                     <br>
