--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
         // When the browser is ready...
         $(function () {
             // Setup form validation on the #register-form element
+
             $("form").validate({
                 // Specify the validation rules
                 rules: {
@@ -75,6 +76,8 @@
                     svc.ValidateLogin($("#email").val(), $("#password").val(), success, fail);
                 }
             });
+
+            window.location = "addasset.html";
         });
     </script>
 
