--- a/www/addasset.html
+++ b/www/addasset.html
@@ -20,6 +20,7 @@
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
     <script src="js/MicrosoftAjax.js"></script>
     <script src="http://192.168.2.13:8010/Services/AssetsTackService.svc/js"></script>
+    <script type="text/javascript" src="phonegap.js"></script>
     <script>
         // When the browser is ready...
         function takePicture() {
