--- a/www/addasset.html
+++ b/www/addasset.html
@@ -23,17 +23,14 @@
     <script type="text/javascript" src="phonegap.js"></script>
     <script>
         // When the browser is ready...
+        function onPhotoFileSuccess(imageData) {
+            alert(imageData);
+        }
+        function onFail(message) {
+            alert('Failed because: ' + message);
+        }
         function takePicture() {
-            navigator.camera.getPicture(function (imageURI) {
-                alert(imageURI);
-            },
-            function (message) {
-                alert(message);
-            },
-            {
-                quality: 50,
-                destinationType: Camera.DestinationType.FILE_URI
-            });
+            navigator.camera.getPicture(onPhotoDataSuccess, onFail, { quality: 50 });
         }
         $(function () {
             $("#datepicker").datepicker({ dateFormat: 'dd-mm-yy' });
