--- a/www/addasset.html
+++ b/www/addasset.html
@@ -39,6 +39,7 @@
             },
             {
                 quality: 50,
+                encodingType: Camera.EncodingType.JPEG,
                 destinationType: Camera.DestinationType.DATA_URL
             });
         }
@@ -195,8 +196,8 @@
                     <input name="Name" id="Name" type="text" class="txt_box9" placeholder="Name">
                 </div>
 
-                <div class="numb">
-                    <input name="slnumb" id="slnumb" type="text" class="txt_box10" placeholder="S/N">
+                <div class="name">
+                    <input name="slnumb" id="slnumb" type="text" class="txt_box9" placeholder="S/N">
                 </div>
 
                 <input type="text" name="datepicker" id="datepicker" placeholder="Date of Purchase">
