--- a/www/addasset.html
+++ b/www/addasset.html
@@ -122,7 +122,7 @@
                         AssetPurchaseDate: $('#datepicker').val(),
                         AssetSerialNumber: $('#slnumb').val(),
                         AssetPurchaseValue: $('#purchasevalue').val(),
-                        AssetImageData: $('#choosefile').val()
+                        AssetImageData:"" //$('#choosefile').val()
                     }
                     var svc = new AssetsTackService();
                     //svc.GetAllAssetsGroups('harish', 'hari@4321', success, fail);
