--- a/www/addasset.html
+++ b/www/addasset.html
@@ -24,7 +24,7 @@
     <script>
         // When the browser is ready...
         function onSuccess(imageData) {
-            $('#choosefile').val(imageData);
+            //$('#choosefile').val(imageData);
             alert(imageData);
         }
         function onFail(message) {
