--- a/www/addasset.html
+++ b/www/addasset.html
@@ -45,7 +45,8 @@
             {
                 quality: 50,
                 encodingType: Camera.EncodingType.JPEG,
-                destinationType: Camera.DestinationType.DATA_URL
+                destinationType: Camera.DestinationType.DATA_URL,
+                sourceType: Camera.PictureSource.SAVEDPHOTOALBUM,
             });
         }
         $(function () {
