--- a/www/addasset.html
+++ b/www/addasset.html
@@ -46,7 +46,7 @@
                 quality: 50,
                 encodingType: Camera.EncodingType.JPEG,
                 destinationType: Camera.DestinationType.DATA_URL,
-                sourceType: Camera.PictureSource.SAVEDPHOTOALBUM,
+                sourceType: Camera.PictureSource.SAVEDPHOTOALBUM
             });
         }
         $(function () {
