--- a/www/addasset.html
+++ b/www/addasset.html
@@ -45,8 +45,7 @@
             {
                 quality: 50,
                 encodingType: Camera.EncodingType.JPEG,
-                destinationType: Camera.DestinationType.DATA_URL,
-                sourceType: Camera.PictureSource.SAVEDPHOTOALBUM
+                destinationType: Camera.DestinationType.DATA_URL
             });
         }
         $(function () {
