--- a/www/editasset.html
+++ b/www/editasset.html
@@ -5,7 +5,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title> Asset Track </title>
     <link rel="shortcut icon" href="images/icon.png">
     <link href="styles/boilerplate.css" rel="stylesheet" type="text/css">
@@ -22,17 +21,10 @@
     <script src="http://117.247.182.228:8010/Services/AssetsTackService.svc/js"></script>
     <script type="text/javascript" src="phonegap.js"></script>
     <script>
-        // When the browser is ready...
-        function onSuccess(imageData) {
-            $('#choosefile').val(imageData);
-            alert(imageData);
-        }
-        function onFail(message) {
-            alert('Failed because: ' + message);
-        }
         function takePicture() {
             navigator.camera.getPicture(function (imageData) {
-                alert(imageData);
+                $('#assetImage').attr("src", "data:image/jpeg;base64," + imageData);
+                $('#assetImage').show();
             },
             function (message) {
                 alert(message);
@@ -201,6 +193,7 @@
         <div class="box_group">
 
             <form>
+                <img id="assetImage" alt="Asset Image" style="display:none;">
                 <select class="dropdown_box8" name="selectgroup" id="selectgroup">
                     <option value=""> Select group </option>
                     <option value="1"> test </option>
